[package]
name = "vcanrs"
version = "0.1.0"
edition = "2021"
description = "A repo analyze CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
time = "0.1.39"
term-table = "1.3.2"
clap = { version = "3.1.6", features = ["derive"] }
mockall_double = "0.1.0"

[dev-dependencies]
mockall = "0.11.0"
test-context = "0.1.3"
tempfile = "3"
chrono = "0.4.19"
rand = "0.8.5"
assert_matches = "1.5"
